# ACT-OpenClaw-Bridge

./: .gitignore  CONTRIBUTING.md  README.md  README_EN.md  README_ZH.md  act_gateway.py  act_openclaw_runtime.py  act_openclaw_skill_mirror.py  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
docker-demo/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docker-demo/web_ui/: Dockerfile  app.py
docker-demo/web_ui/templates/: index.html
docs/: index.html  openclaw_skill_example.md
examples/: test_gateway.sh
