[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "act-openclaw-bridge"
version = "1.0.1"
description = "ACT Gateway for OpenClaw Integration with one-click installation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "lcyubin", email = "deepseek609609@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["act*", "examples*", "docs*"]

[project.urls]
Homepage = "https://github.com/deepseek609609-collab/ACT-OpenClaw-Bridge"
Repository = "https://github.com/deepseek609609-collab/ACT-OpenClaw-Bridge"
